modules/gdscript/tests/scripts/analyzer/errors/invalid_identifier.gd
func test():
	print(GDScriptFunctionState)
	print(GDScriptNativeClass)
